2008-03-18  kitone  <kitone@gna.org>

	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	The signal "configure" is now connected on the waveform frame.
	Now, it doesn't interfere with the renderer.

2008-03-18  kitone  <kitone@gna.org>

	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Add virtual function waveform_changed.

2008-03-18  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add new split function (usplit) with a best support of Glib::ustring.

2008-03-17  kitone  <kitone@gna.org>

	* src/actions/WaveformRendererGL.cc:
	Cleanup.

2008-03-17  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/actions/DocumentManagement.cc:
	Add new action "Save All".

2008-03-15  kitone  <kitone@gna.org>

	* src/actions/WaveformRendererGL.cc:
	* src/main.cc:
	Displayed a message when window system doesn't support OpenGL.

2008-03-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformRendererGL.cc:
	* src/main.cc:
	Add waveform renderer using OpenGL.

2008-03-13  kitone  <kitone@gna.org>

	* acinclude.m4:
	* configure.in:
	* src/Makefile.am:
	Add dependences: OpenGL, gtkglextmm-1.2

2008-03-13  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformManagement.cc:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Add the new Waveform Editor.

2008-03-13  kitone  <kitone@gna.org>

	* src/gui/MenuBar.cc:
	Remove Waveform actions.

2008-03-13  kitone  <kitone@gna.org>

	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	Rename OpenWaveformUI by DialogOpenWaveform
	and move in DialogFileChosser.

	* src/Makefile.am:
	* src/gui/OpenWaveformUI.cc:
	* src/gui/OpenWaveformUI.h:
	Remove files.

2008-03-13  kitone  <kitone@gna.org>

	* src/Waveform.cc:
	* src/Waveform.h:
	Add static function 'create_from_file'.
